[tool.poetry]
name = "putlib"
version = "0.3.3"
description = "Python Utilities"
authors = ["Keisuke Izumiya <k.izumiya.13@gmail.com>"]
maintainers = ["Keisuke Izumiya <k.izumiya.13@gmail.com>"]
license = "Apache-2.0"

readme = "README.rst"

repository = "https://github.com/izumiya-keisuke/putlib"

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
)/
'''
